--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-base",
+  "name": "consumirApi",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://192.168.0.118:82/",
+  "homepage": "http://192.168.0.118:81/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
